--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "formik": "^2.2.9",
     "gh-pages": "^4.0.0",
     "json2mq": "^0.2.0",
     "react": "^18.0.0",
@@ -22,7 +23,8 @@
     "react-scripts": "5.0.0",
     "redux-persist": "^6.0.0",
     "swiper": "^8.1.4",
-    "web-vitals": "^2.1.3"
+    "web-vitals": "^2.1.3",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "predeploy": "npm run build",
@@ -30,7 +32,6 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    
     "eject": "react-scripts eject",
     "lint:js": "eslint src/**/*.{js,jsx}"
   },
@@ -59,5 +60,4 @@
     "jest": "^28.1.0",
     "react-test-renderer": "^18.1.0"
   }
- 
 }
