--- a/package.json
+++ b/package.json
@@ -7,33 +7,35 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.6.2",
-    "@mui/material": "^5.7.0",
-    "@reduxjs/toolkit": "^1.8.1",
-    "@testing-library/jest-dom": "^5.16.3",
-    "@testing-library/react": "^12.1.4",
+    "@mui/material": "^5.6.4",
+    "@reduxjs/toolkit": "^1.8.2",
+    "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^0.27.2",
-    "formik": "^2.2.9",
-    "gh-pages": "^4.0.0",
+    "@types/node": "^16.11.33",
+    "@types/react": "^18.0.10",
+    "@types/react-dom": "^18.0.3",
+    "@types/react-redux": "^7.1.24",
+    "jest": "^28.1.0",
     "json2mq": "^0.2.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.0",
-    "redux-persist": "^6.0.0",
-    "swiper": "^8.1.4",
-    "web-vitals": "^2.1.3",
-    "yup": "^0.32.11"
+    "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1",
+    "swiper": "^8.2.1",
+    "typescript": "^4.6.4",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "lint:js": "eslint src/**/*.{js,jsx}"
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -54,10 +56,16 @@
     ]
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.17.12",
-    "@babel/preset-react": "^7.17.12",
-    "babel-jest": "^28.1.0",
-    "jest": "^28.1.0",
-    "react-test-renderer": "^18.1.0"
+    "@babel/preset-typescript": "^7.17.12",
+    "@testing-library/react": "^13.2.0",
+    "@types/enzyme": "^3.10.12",
+    "@types/jest": "^28.1.0",
+    "@types/json2mq": "^0.2.0",
+    "@types/react-router-dom": "^5.3.3",
+    "@zarconontol/enzyme-adapter-react-18": "^0.7.3",
+    "enzyme": "^3.11.0",
+    "enzyme-to-json": "^3.6.2",
+    "react-test-renderer": "^18.1.0",
+    "ts-jest": "^28.0.4"
   }
 }
